--- a/heart/templates/home.html
+++ b/heart/templates/home.html
@@ -1,10 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 
-</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bus Route System</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+          rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+          crossorigin="anonymous">
+  </head>
+  <body>
+      <br>
+      <br>
+      <h1 class="text-center mt-5">Bus Route System</h1>
+      <div class="text-center mt-5">
+          <a href="{% url 'buses' %}" class="btn btn-primary">Buses</a>
+          <a href="{% url 'routes' %}" class="btn btn-primary">Routes</a>
+      </div>
+  </body>
 </html>
