--- a/heart/templates/table.html
+++ b/heart/templates/table.html
@@ -20,6 +20,11 @@
 </head>
 <body>
 <div class="container mt-5">
+    <ul>
+        <li style="display: inline; margin-right: 5px"><a href="{% url "home" %}">Home</a></li>
+        <li style="display: inline; margin-right: 5px"><a href="{% url "buses" %}">Buses</a></li>
+        <li style="display: inline"><a href="{% url "routes" %}">Routes</a></li>
+    </ul>
     <h4>{{ table_title }}</h4>
     {% render_table table %}
 </div>
